testdata/baselines/reference/submodule/conformance/jsdocTemplateTag8.errors.txt
a.js(17,1): error TS2322: Type '{ x: string; }' is not assignable to type '{ x: number; }'.
  Types of property 'x' are incompatible.
    Type 'string' is not assignable to type 'number'.
a.js(18,1): error TS2322: Type '{ x: number; }' is not assignable to type '{ x: string; }'.
  Types of property 'x' are incompatible.
    Type 'number' is not assignable to type 'string'.
a.js(29,33): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(34,31): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(48,29): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(53,27): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(56,1): error TS2322: Type '{ f: (x: any) => void; }' is not assignable to type '{ f: (x: any) => string; }'.
  The types returned by 'f(...)' are incompatible between these types.
    Type 'void' is not assignable to type 'string'.
a.js(62,12): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== a.js (8 errors) ====
    /**
     * @template out T
     * @typedef {Object} Covariant
     * @property {T} x
     */
    
    /**
     * @type {Covariant<unknown>}
     */
    let super_covariant = { x: 1 };
    
    /**
     * @type {Covariant<string>}
     */
    let sub_covariant = { x: '' };
    
    super_covariant = sub_covariant;
    ~~~~~~~~~~~~~~~
!!! error TS2322: Type '{ x: string; }' is not assignable to type '{ x: number; }'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    sub_covariant   = super_covariant; // Error
    ~~~~~~~~~~~~~
!!! error TS2322: Type '{ x: number; }' is not assignable to type '{ x: string; }'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.
    
    /**
     * @template in T
     * @typedef {Object} Contravariant
     * @property {(x: T) => void} f
     */
    
    /**
     * @type {Contravariant<unknown>}
     */
    let super_contravariant = { f: (x) => {} };
                                    ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    /**
     * @type {Contravariant<string>}
     */
    let sub_contravariant = { f: (x) => {} };
                                  ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    super_contravariant = sub_contravariant;  // Error
    sub_contravariant = super_contravariant;
    
    /**
     * @template in out T
     * @typedef {Object} Invariant
     * @property {(x: T) => T} f
     */
    
    /**
     * @type {Invariant<unknown>}
     */
    let super_invariant = { f: (x) => {} };
                                ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    /**
     * @type {Invariant<string>}
     */
    let sub_invariant = { f: (x) => { return "" } };
                              ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    
    super_invariant = sub_invariant;  // Error
    sub_invariant = super_invariant;  // Error
    ~~~~~~~~~~~~~
!!! error TS2322: Type '{ f: (x: any) => void; }' is not assignable to type '{ f: (x: any) => string; }'.
!!! error TS2322:   The types returned by 'f(...)' are incompatible between these types.
!!! error TS2322:     Type 'void' is not assignable to type 'string'.
    
    /**
     * @template in T
     * @param {T} x
     */
    function f(x) {}
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    